Added some JavaScript

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header p {
     transition: all 0.5s ease;
 }
 
-.photobanner img:hover {
+.photobanner img:hover, .myHover img:hover {
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
