Cart page mocked up moving onto user details

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+hr.style-one { 
+	border: 0; 
+	height: 1px; 
+	background: #333; 
+	background-image: linear-gradient(to right, #ccc, #333, #ccc); 
+}
+
+
+.bottom-spacing{
+	margin-bottom: 20px;
+	
+}
+
+.cart-hr {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+}
 
 .no-padding {
 	margin: 0;
