--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
+footer a, footer p {
+	color: rgba(255, 255, 255, 0.45);
+	}
+
+
+footer {
+	background-color: rgba(37, 37, 37, 0.88);
+	color: white;
+	padding-bottom: 20px;
+	}
+
+
+footer a:hover {
+	text-decoration: none;
+	color: white;
+	}
+
+.main-background {
+	background-color: white;	
+	}
+
 hr.style-one { 
 	border: 0; 
 	height: 1px; 
