--- a/app/templates/base/_footer.html
+++ b/app/templates/base/_footer.html
@@ -2,7 +2,7 @@
 <footer class="col-md-12">
 <hr>
 
-<div class="col-md-2">
+<div class="col-md-2 col-md-offset-1" >
 	<p class="no-padding">Company Name</p>
 	<p class="no-padding">Address Line 1</p>
 	<p class="no-padding">Address Line 2</p>
