product view page done to mock-up

--- a/app/templates/product/_image-block.html
+++ b/app/templates/product/_image-block.html
@@ -1,24 +1,23 @@
 <!-- image block is used to show the different images for a product. -->
 <!-- image block -->
-<div class="container col-md-6 border-img">
+
 	<div class="col-sm-6 col-md-6">
-		<img src="../images/image_holder-250x300.png" alt="" class="img-responsive center-block border-img">
+		<img src="{{ url_for('static', filename='images/image_holder-250x300.png') }}" alt="" class="img-responsive center-block border-img">
 	</div>
 	<div class="col-sm-6 col-md-6">
 		<div class="col-xs-12 col-sm-12 col-md-12">
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-12">	
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-12">
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
-			<div class="col-xs-4 col-sm-4 col-md-4"><img src="../images/image_holder-75x90.png" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
+			<div class="col-xs-4 col-sm-4 col-md-4"><img src="{{ url_for('static', filename='images/image_holder-75x90.png') }}" alt="" class="img-responsive center-block"></div>
 		</div>
 	</div>
-</div>
