--- a/app/templates/product/_product-preview.html
+++ b/app/templates/product/_product-preview.html
@@ -6,7 +6,7 @@
         <h3>Thumbnail label</h3>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
         <h5>Price &euro;29.99</h5>
-        <p><a href="product_view.html" class="btn btn-primary" role="button">View</a> <a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <p><a href="{{ url_for('main.product_view', item='54384') }}" class="btn btn-primary" role="button">View</a> <a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
