--- a/app/templates/base/_nav.html
+++ b/app/templates/base/_nav.html
@@ -27,7 +27,7 @@
       
 			<h5>
 <!-- 			The cost should change this will be a flask thing -->
-			<a href="cart.html"> <span class="glyphicon glyphicon-shopping-cart"></span> Cart&nbsp;&euro;23.99&nbsp;&nbsp;&nbsp;</a>
+			<a href="{{ url_for('main.cart') }}"> <span class="glyphicon glyphicon-shopping-cart"></span> Cart&nbsp;&euro;23.99&nbsp;&nbsp;&nbsp;</a>
 			
 
             <a class="active" href="{{ url_for('auth.logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout&nbsp;&nbsp;&nbsp;</a>
