Project moved into next phase
All the mock-ups have been removed as they are no longer need.
Next phase is to start buliding the database for the products.

Not to worried about the users just yet.

--- a/app/templates/accounts/_update-postal-address.html
+++ b/app/templates/accounts/_update-postal-address.html
@@ -77,12 +77,7 @@
     <select id="selectbasic" name="selectbasic" class="form-control">
 
 
-      <option value="" selected="selected">(please select a country)</option>
-      <option value="AF">Afghanistan</option>
-      <option value="AL">Albania</option>
-      <option value="DZ">Algeria</option>
-      <option value="ZM">Zambia</option>
-      <option value="ZW">Zimbabwe</option>>
+      {% include 'accounts/_address.html' %}
 
 
     </select>
