Got the imasge and data loading with some form

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -13,7 +13,8 @@
   <div class="panel-body">
 
 
-{% for i in list %}
+{% for product in list %}
+
 {% include "index/_index-product-view.html" %}
 {% endfor %}
 
