--- a/app/templates/main/products.html
+++ b/app/templates/main/products.html
@@ -3,7 +3,7 @@
 
 <div class="row padding-sides">
 
-{% for i in list %}
+{% for product in list %}
 {% include "product/_product-preview.html" %}
 {% endfor %}
 
