--- a/app/templates/index/_index-product-view.html
+++ b/app/templates/index/_index-product-view.html
@@ -5,11 +5,11 @@
     
     	<a href="#" class=""> 	
     		<div class="col-md-10 col-md-offset-1">
-     			<img src="{{ url_for('static', filename='images/image_holder-171x180.png') }}" alt="..." class="img-responsive center-block">
+     			<img src="{{ url_for('static', filename='images/171x180/' + product.image) }}" alt="..." class="img-responsive center-block">
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
-    			<h5>Product Name</h5>
-     			<h5>Price &euro;29.99</h5>
+    			<h5>{{ product.title }}</h5>
+     			<h5>Price &euro;{{ product.cost }}</h5>
      		</div>  		
      		
     	</a>    
