--- a/app/templates/product/_image-block.html
+++ b/app/templates/product/_image-block.html
@@ -2,7 +2,7 @@
 <!-- image block -->
 
 	<div class="col-sm-6 col-md-6">
-		<img src="{{ url_for('static', filename='images/image_holder-250x300.png') }}" alt="" class="img-responsive center-block border-img">
+		<img src="{{ url_for('static', filename='images/250x300/' + product.image) }}" alt="" class="img-responsive center-block border-img">
 	</div>
 	<div class="col-sm-6 col-md-6">
 		<div class="col-xs-12 col-sm-12 col-md-12">
