--- a/app/templates/product/_product-preview.html
+++ b/app/templates/product/_product-preview.html
@@ -1,12 +1,12 @@
 <!-- A basic view of a product. This seems to be working okay for now -->
 <div class="col-sm-6 col-md-3">
     <div class="thumbnail">
-      <img src="{{ url_for('static', filename='images/image_holder-200x240.png') }}" alt="...">
+      <img src="{{ url_for('static', filename='images/200x240/' + product.image) }}" alt="...">
       <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-        <h5>Price &euro;29.99</h5>
-        <p><a href="{{ url_for('main.product_view', item='54384') }}" class="btn btn-primary" role="button">View</a> <a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
+        <h3>{{ product.title }}</h3>
+        <p>{{ product.description }}</p>
+        <h5>Price &euro;{{ product.cost }}</h5>
+        <p><a href="{{ url_for('main.product_view', item=product.proID) }}" class="btn btn-primary" role="button">View</a> <a href="#" class="btn btn-default" role="button">Add to Cart</a></p>
       </div>
     </div>
   </div>
