Started to work on user but really need to set up the migration system

--- a/app/templates/auth/account.html
+++ b/app/templates/auth/account.html
@@ -79,7 +79,7 @@
 <div class="container col-md-12">
 
 
-{% for i in list %}
+{% for product in product_list %}
 {% include "accounts/_owner-product-view.html" %}
 {% endfor %}
 
