--- a/app/templates/accounts/_owner-product-view.html
+++ b/app/templates/accounts/_owner-product-view.html
@@ -4,17 +4,17 @@
 	<li>
 	<div class="container">
 	<div class="col-md-3 text-center">
-	<a href="../images/image_holder-75x90.png"><img src="{{ url_for('static', filename='images/image_holder-75x90_thumbnail.jpeg') }}" width="90" height="120" border="0" align="middle"></a>
+	<a href="#"><img src="{{ url_for('static', filename='images/75x90/' + product.image) }}" width="90" height="120" border="0" align="middle"></a>
 	</div>	
 	<div class="col-md-6">
-	<h2>Product title</h2>
-	<p>This would be the description of the product</p>
-	<p>Cost: &euro; 35.00</p>
+	<h2>{{ product.title }}</h2>
+	<p>{{ product.description }}</p>
+	<p>Cost: &euro; {{ product.cost }}</p>
 	<p>Shipping class: class 1</p>
 	</div>
 	
 	<div class="col-md-3">
-	<p><input type="checkbox" name="IsActive" value="Is Active" checked> Product is currently for sale.</p>
+	<p><input type="checkbox" name="IsActive" value="Is Active" {% if product.available %} checked {% endif %}> Product is currently for sale.</p>
 	<p><input type="checkbox" name="discount" value="discount"> Add 10% discount.</p>
 	</div>	
 
