Added some tools and started on the user login. Need more tests writen

--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -3,7 +3,8 @@
 
 <div class="row padding-sides bottom-spacing">
 
-{% include "login/_login.html" %}
+
+{% include "errors/_404.html" %}
 
 </div>
 {% endblock %}
