--- a/app/templates/login/_login.html
+++ b/app/templates/login/_login.html
@@ -1,5 +1,5 @@
 <div class="container col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4" style="text-align: center">    
-<form method="POST" action="{{ url_for('main.index') }}">
+<form method="POST" action="{{ url_for('auth.login') }}">
 	{{ form.hidden_tag() }}
 
   <div class="form-group">
